# theurbanworld

./: CLAUDE.md  CLAUDE_CONTEXT.md  README.md
agent-os/: config.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
agent-os/specs/2026-01-01-map-foundation/: spec.md  tasks.md
agent-os/specs/2026-01-02-global-view-controls/: spec.md  (+1 more)
pipeline/: .env.example  Dockerfile.postgis  FUTURE_WORK.md  GHSL_PIPELINE.md  Makefile  README.md  docker-compose.yml  init-extensions.sql  pyproject.toml
pipeline/_to_implement/: s10_download_basemap.py  s11_export_web_formats.py
pipeline/data/raw/: download_progress.json
pipeline/src/: __init__.py  app_explore.py  s01_download_ghsl.py  s02_extract_ucdb.py  s02_extract_urban_centers.py  s02a_explore_ucdb.py  s02a_extract_city_attributes.py  s02b_extract_cities.py  s02b_extract_city_geometries.py  s02c_extract_epoch_geometries.py  s02c_generate_cities.py  s03_modal_raster_1km_to_h3_r8.py  s03_raster_100m_to_h3_r9.py  s03_raster_1km_to_h3_r8.py  s03_raster_to_h3_100m.py  s03_raster_to_h3_100m_modal.py  s03a_download_h3_r8.py  s03a_download_h3_r9.py  s03b_load_h3_r8_to_psql.py  s03b_load_h3_r9.py  s04_compute_city_metrics.py  s04_raster_1km_to_h3_r8.py  s04_raster_to_h3_1km.py  s04_raster_to_h3_1km_modal.py  s04a_compute_city_populations.py  s04b_compute_city_metrics.py  s04b_compute_city_rankings.py  s05_extract_city_areas.py  s05_extract_city_boundaries.py  s05_extract_city_outlines.py  s06_compute_radial_profiles.py  s06_modal_download_pmtiles.py  s07_compute_context_metrics.py  s07_compute_radial_profiles.py  s07_export_web_formats.py  s07_generate_boundary_pmtiles.py  s08_compute_context_metrics.py  s08_merge_h3_timeseries.py  s09_generate_city_json.py  s10_generate_font_glyphs.py  (+5 more)
pipeline/src/utils/: __init__.py  config.py  geometry_utils.py  h3_utils.py  progress.py  r2_config.py  raster_utils.py  tile_utils.py
web/: .env.example  CLAUDE.md  README.md  TASKS.md  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts
web/app/: app.config.ts  app.vue
web/types/: city.ts  h3.ts  map.ts
web/utils/: constants.ts  formatters.ts
(+53 files in other folders)
