[project]
name = "urban-pipeline"
version = "0.1.0"
description = "GHSL urban data processing pipeline for web visualization"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Core geospatial
    "rioxarray>=0.17.0",
    "xarray>=2024.1.0",
    "rasterio>=1.3.10",
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    # H3 processing
    "h3>=4.0.0",
    "h3ronpy>=0.21.0",
    # Data processing
    "polars>=1.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    # Database
    "duckdb>=1.1.0",
    # Distributed computing
    "dask[complete]>=2024.1.0",
    # Utilities
    "httpx>=0.27.0",
    "tqdm>=4.66.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Country/continent mapping
    "pycountry>=24.6.0",
    "pycountry-convert>=0.7.2",
    # Cloud storage (R2 upload)
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.5",
    # Data exploration
    "streamlit>=1.40.0",
    "modal>=1.2.4",
]

[project.scripts]
download = "src.s01_download_ghsl:main"
extract-schema = "src.s01b_extract_ucdb_schema:main"
extract = "src.s02_extract_urban_centers:main"
# convert-100m: use `modal run src/s03_raster_100m_to_h3_r9.py`
boundaries = "src.s05_extract_city_boundaries:main"
radial = "src.s06_compute_radial_profiles:main"
export = "src.s07_export_web_formats:main"
context = "src.s08_compute_context_metrics:main"
basemap = "src.s10_download_basemap:main"
upload = "src.s20_upload_to_r2:main"
r2-cors = "src.s21_configure_r2_cors:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "ipython>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
